Changes to game for editor purposes
Immutable objects caused the editor to fail often.
To counter this, the Level object creation does not work
with immutables per se, but creates a new Level object and
sets its attributes internally.

Also, the main branch got merged in this branch which caused
some problems with old code. Some refactoring did the trick.

Some renaming has been done also to show the purpose of
some classes descriptively.

I also added the gradle task for the editor (callable
with Gradle -> gui -> Tasks -> other -> taskForEditorScreen).

Some things do work right now (like the editor creating a
playable game which prompts the victory screen).
Apparently we need to work on some window links in further
issues as it seems.